[package]
name = "pixel-perfect-core"
description = "Resize pixelated images to their exact size"
version = "1.0.0"
authors = ["Jeremy Stucki <jeremy@myelin.ch>"]
edition = "2018"

# Exclude 'jpeg_rayon'
[dependencies.image]
version = "0.22"
default-features = false
features = [
    "gif_codec",
    "jpeg",
    "ico",
    "png_codec",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "bmp",
    "hdr",
    "dxt"
]

[features]
default = ["jpeg_rayon"]
jpeg_rayon = ["image/jpeg_rayon"]
