[package]
name = "pixel-perfect-wasm"
description = "Resize pixelated images to their exact size"
version = "1.0.0"
authors = ["Jeremy Stucki <jeremy@myelin.ch>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.pixel-perfect-core]
path = "../core"
default-features = false

# Exclude 'jpeg_rayon'
[dependencies.image]
version = "0.22"
default-features = false
features = [
    "gif_codec",
    "jpeg",
    "ico",
    "png_codec",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "bmp",
    "hdr",
    "dxt"
]
